Legality and delta systems

--- a/TemporalThievery.csproj
+++ b/TemporalThievery.csproj
@@ -28,10 +28,22 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Puzzles\Chapter_0\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Puzzles\Test.json">
+    <None Update="Puzzles\Chapter_0\Level_4.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzles\Chapter_0\Level_5.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzles\Chapter_0\Level_3.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzles\Chapter_0\Level_0.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzles\Chapter_0\Level_7.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzles\Chapter_0\Level_6.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
