--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -85,7 +85,7 @@ jobs:
         
     - uses: vimtor/action-zip@v1
       with:
-        files: D:\a\TemporalThievery\TemporalThievery
+        files: D:\a\TemporalThievery\TemporalThievery\
         recursive: false
         dest: result.zip
 
