--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -84,7 +84,7 @@ jobs:
         Configuration: ${{ matrix.configuration }}
         
     - name: Display file tree
-      run: tree D:\
+      run: tree C:\
         
     #- name: Compress 
     #  uses: vimtor/action-zip@v1
