--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -83,8 +83,8 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
         
-    - name: Display file tree
-      run: tree C:\
+    # - name: Display file tree
+    #   run: tree C:\
         
     #- name: Compress 
     #  uses: vimtor/action-zip@v1
@@ -94,7 +94,7 @@ jobs:
     #    dest: result.zip
 
     # Upload artifact
-    #- name: Upload build artifacts
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #   path: D:\a\
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+       path: C:\
