--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -141,7 +141,7 @@ jobs:
         allowUpdates: true
         artifacts: TemporalThievery_Release
         commit: master
-        tag: Testing Release
+        tag: auto
         name: Latest Commit Release
         body: This is an auto-generated release containing the most recent version of Temporal Thievery based on the latest commit. These are NOT finished releases and are intended for testing and debugging.
       
