--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -74,12 +74,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
 
-    # Install the .NET Core workload
-    - name: Install .NET Core 3.1
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.x
-
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     #- name: Setup MSBuild.exe
     #  uses: microsoft/setup-msbuild@v1.0.2
@@ -139,7 +133,7 @@ jobs:
       uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true
-        artifacts: TemporalThievery_Release
+        artifacts: "TemporalThievery_Release"
         commit: master
         tag: auto
         name: Latest Commit Release
