--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -134,7 +134,7 @@ jobs:
       uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true
-        artifacts: "*TemporalThievery_Release*"
+        artifacts: D:/a/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/net6.0
         commit: master
         tag: auto
         name: Latest Commit Release
