--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -135,7 +135,7 @@ jobs:
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.1
       with:
-        directory: D:/a/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/
+        directory: D:\a\TemporalThievery\TemporalThievery\bin\${{ matrix.configuration }}
         path: ./net6.0
         type: 'zip'
         filename: TemporalThievery_${{ matrix.configuration }}.zip
