--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -135,7 +135,7 @@ jobs:
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.1
       with:
-        directory: ${{ github.workspace }}\bin\${{ matrix.configuration }} #\net6.0
+        directory: ${{ github.workspace }}\bin #\${{ matrix.configuration }} #\net6.0
         type: 'zip'
         filename: TemporalThievery_${{ matrix.configuration }}.zip
     
@@ -143,7 +143,7 @@ jobs:
       uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true
-        artifacts: ${{ github.workspace }}/TemporalThievery_${{ matrix.configuration }}.zip
+        artifacts: ${{ github.workspace }}\bin\TemporalThievery_${{ matrix.configuration }}.zip
         commit: master
         tag: auto
         name: Latest Commit Release
