--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -124,18 +124,18 @@ jobs:
     #    dest: result.zip
 
     # Upload artifact
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: TemporalThievery_${{ matrix.configuration }}
-        path: D:/a #/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/net6.0
+    #- name: Upload build artifacts
+    #  uses: actions/upload-artifact@v3
+    #  with:
+    #    name: TemporalThievery_${{ matrix.configuration }}
+    #    path: D:/a #/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/net6.0
         
         
     - uses: actions/checkout@master
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.1
       with:
-        directory: ${{ github.workspace }}
+        directory: D:/a #/TemporalThievery/TemporalThievery
         type: 'zip'
         filename: TemporalThievery_${{ matrix.configuration }}.zip
     
