--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -143,7 +143,7 @@ jobs:
       uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true
-        artifacts: ${{ github.workspace }}\TemporalThievery_${{ matrix.configuration }}.zip
+        artifacts: D:/a/TemporalThievery_${{ matrix.configuration }}.zip #${{ github.workspace }}\TemporalThievery_${{ matrix.configuration }}.zip
         commit: master
         tag: auto
         name: Latest Commit Release
