--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -128,7 +128,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: TemporalThievery_${{ matrix.configuration }}
-        path: D:/a/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/net6.0
+        path: D:/a/TemporalThievery/TemporalThievery/bin/${{ matrix.configuration }}/net6.0-windows\win-x86
         
     - uses: actions/download-artifact@v3
       with:
