Color-coded pads and gates

--- a/TemporalThievery.csproj
+++ b/TemporalThievery.csproj
@@ -41,5 +41,8 @@
     <None Update="Puzzles\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
