--- a/TemporalThievery.csproj
+++ b/TemporalThievery.csproj
@@ -46,5 +46,8 @@
     <None Update="Data\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Trireme\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
